--- a/PUMa/Task_List_6.ipynb
+++ b/PUMa/Task_List_6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -76,7 +76,6 @@
     "    def __init__(self):\n",
     "        self.probs = None\n",
     "        self.class_probs = None\n",
-    "        self.attr_probs = {}\n",
     "    \n",
     "    def fit(self, ds):\n",
     "        attributes = list(dataset.columns.values)\n",
@@ -84,8 +83,6 @@
     "        \n",
     "        self.probs = calc_all_probs(ds, attributes)\n",
     "        self.class_probs = calc_attr_probs(ds, 'Class')\n",
-    "        for attr in attributes:\n",
-    "            self.attr_probs[attr] = calc_attr_probs(ds, attr)\n",
     "    \n",
     "    def predict(self, x):\n",
     "        best_posterior = -1\n",
@@ -137,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -166,30 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---- Confusion matrix ----\n",
-      "[[ 56   3  22   0]\n",
-      " [  5   2   0   1]\n",
-      " [  4   1 236   0]\n",
-      " [  9   1   0   6]]\n",
-      "Accuracy: 86.71\n",
-      "Precision: 70.36\n",
-      "Recall: 57.39\n",
-      "F1: 61.42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def evaluate_classifier():\n",
-    "    train_ds, test_ds = train_test_split(dataset, test_size=0.2)\n",
+    "def evaluate_classifier_own(train_ds, test_ds):\n",
     "    bc = BayesClassfier()\n",
     "    bc.fit(train_ds)\n",
     "    \n",
@@ -209,9 +189,151 @@
     "    print('Recall: %.2f' % recall)\n",
     "    print('F1: %.2f' % f1)\n",
     "    \n",
-    "    \n",
-    "evaluate_classifier()"
+    "    # Accuracy = (TP + TN) / (TP + FP + FN + TN)\n",
+    "    # Precision = TP / (TP + FP)\n",
+    "    # Recall = TP / (TP + FN)\n",
+    "    # F1 =  2 * precision * recall / (precision + recall)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from copy import deepcopy\n",
+    "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "\n",
+    "def preprocess(ds):\n",
+    "    ds_cpy = deepcopy(ds)\n",
+    "    \n",
+    "    ds_cpy['Price'] = ds_cpy['Price'].map({'low': 0, 'med': 1, 'high': 2, 'vhigh': 3})\n",
+    "    ds_cpy['Maintenance'] = ds_cpy['Maintenance'].map({'low': 0, 'med': 1, 'high': 2, 'vhigh': 3})\n",
+    "    ds_cpy['Doors'] = ds_cpy['Doors'].map({'2': 2, '3': 3, '4': 4, '5more': 5})\n",
+    "    ds_cpy['Persons'] = ds_cpy['Persons'].map({'2': 2, '4': 4, 'more': 5})\n",
+    "    ds_cpy['Luggage_boot'] = ds_cpy['Luggage_boot'].map({'small': 0, 'med': 1, 'big': 2})\n",
+    "    ds_cpy['Safety'] = ds_cpy['Safety'].map({'low': 0, 'med': 1, 'high': 2})\n",
+    "    ds_cpy['Class'] = ds_cpy['Class'].map({'unacc': 0, 'acc': 1, 'good': 2, 'vgood': 3})\n",
+    "    \n",
+    "    return ds_cpy\n",
+    "\n",
+    "\n",
+    "def evaluate_classifier_sklearn(train_ds, test_ds):\n",
+    "    bc = MultinomialNB(fit_prior=False)\n",
+    "    \n",
+    "    train_ds_cpy = preprocess(train_ds)\n",
+    "    test_ds_cpy = preprocess(test_ds)\n",
+    "    \n",
+    "    train_X = train_ds_cpy[['Price', 'Maintenance', 'Doors', 'Persons', 'Luggage_boot', 'Safety']]\n",
+    "    train_Y = train_ds_cpy['Class']\n",
+    "    \n",
+    "    bc.fit(train_X, train_Y)\n",
+    "    \n",
+    "    test_X = test_ds_cpy[['Price', 'Maintenance', 'Doors', 'Persons', 'Luggage_boot', 'Safety']]\n",
+    "    \n",
+    "    y_true = test_ds_cpy['Class']\n",
+    "    y_pred = bc.predict(test_X)\n",
+    "    #y_pred = cross_val_predict(bc, test_X, y_true, cv=8)\n",
+    "    \n",
+    "    cnf_matrix = mtr.confusion_matrix(y_true, y_pred)\n",
+    "    accuracy = mtr.accuracy_score(y_true, y_pred) * 100.0\n",
+    "    precision = mtr.precision_score(y_true, y_pred, average='macro') * 100.0\n",
+    "    recall = mtr.recall_score(y_true, y_pred, average='macro') * 100.0\n",
+    "    f1 = mtr.f1_score(y_true, y_pred, average='macro') * 100.0\n",
+    "    \n",
+    "    print(\"---- Confusion matrix ----\")\n",
+    "    print(cnf_matrix)\n",
+    "    print('Accuracy: %.2f' % accuracy)\n",
+    "    print('Precision: %.2f' % precision)\n",
+    "    print('Recall: %.2f' % recall)\n",
+    "    print('F1: %.2f' % f1)\n",
+    "    \n",
+    "    print('Log_class_prior:', bc.class_log_prior_)\n",
+    "    print('Feature_count:', bc.feature_count_)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Own:\n",
+      "---- Confusion matrix ----\n",
+      "[[ 64   1  20   0]\n",
+      " [ 11   6   0   1]\n",
+      " [ 11   0 222   0]\n",
+      " [  3   0   0   7]]\n",
+      "Accuracy: 86.42\n",
+      "Precision: 84.21\n",
+      "Recall: 68.48\n",
+      "F1: 73.20\n",
+      "\n",
+      "\n",
+      "Sklearn:\n",
+      "---- Confusion matrix ----\n",
+      "[[150  44  21  18]\n",
+      " [ 12  60   3  10]\n",
+      " [  0   0  13   5]\n",
+      " [  0   0   4   6]]\n",
+      "Accuracy: 66.18\n",
+      "Precision: 49.34\n",
+      "Recall: 66.80\n",
+      "F1: 52.00\n",
+      "Log_class_prior: [-1.38629436 -1.38629436 -1.38629436 -1.38629436]\n",
+      "Feature_count: [[1623. 1596. 3383. 3267.  916.  719.]\n",
+      " [ 422.  411. 1067. 1344.  325.  452.]\n",
+      " [  17.   17.  182.  227.   49.   75.]\n",
+      " [  22.   44.  203.  251.   87.  110.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ds, test_ds = train_test_split(dataset, test_size=0.2)\n",
+    "\n",
+    "\n",
+    "print('Own:')\n",
+    "evaluate_classifier_own(train_ds, test_ds)\n",
+    "\n",
+    "print('\\n\\nSklearn:')\n",
+    "evaluate_classifier_sklearn(train_ds, test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'acc': 0.2222222222222222, 'good': 0.03993055555555555, 'unacc': 0.7002314814814815, 'vgood': 0.03761574074074074}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calc_attr_probs(dataset, 'Class'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
